Make personas right way

--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -45,12 +45,12 @@
         <div class="row">
             <div class="col-sm-6">
                 <p class="type--fine-print">
-                    Supercharge your web workflow
+                    Достигайте целей в игровой форме!
                 </p>
             </div>
             <div class="col-sm-6 text-right text-center-xs">
                 <span class="type--fine-print">&copy;
-                    <span class="update-year"></span> Stack Inc.</span>
+                    <span class="update-year"></span> GoalGame Inc.</span>
                 <a class="type--fine-print" href="#">Privacy Policy</a>
                 <a class="type--fine-print" href="#">Legal</a>
             </div>
