--- a/app/views/daily_reports/index.html.erb
+++ b/app/views/daily_reports/index.html.erb
@@ -1,35 +1,34 @@
 <div class="main-container">
+    <section class="text-center">
+        <div class="modal-instance">
+            <a class="btn modal-trigger" href="#">
+                <span class="btn__text">
+                    Написать отчет
+                </span>
+            </a>
+            <div class="modal-container">
+                <!-- <div class="modal-close modal-close-cross"></div> -->
+                <div class="modal-content">
+                    <div class="boxed boxed--lg">
+                        <%= render "create_daily_report_form", daily_report: DailyReport.new %>
+                    </div>
+                </div>
+            </div>
+        </div><!--end of modal instance-->
+    </section>
     <section class="space--sm">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12">
-                    <div class="">
-                        <div class="row">
-                                <% @daily_reports.each do |daily_report| %>
-                                    <article>
-                                        <div class="article__title text-center">
-                                            <a href="#">
-                                                <h2>Отчет за <%= daily_report.created_at %></h2>
-                                            </a>
-                                        </div>
-                                        <div class="article__body">
-                                            <p>
-                                                <%= daily_report.content.html_safe %>
-                                            </p>
-                                            <a href="#">Прочитать полностью</a>
-                                        </div>
-                                    </article>
-                                <% end %>
-                        </div>
-                        <!--end of row-->
-                        <div class="pagination">
-                            <div class="col-xs-6">
-                                <a class="type--fine-print" href="#">&laquo; Предыдущие</a>
+                <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
+                    <div class="process-1">
+                        <% @daily_reports.each do |daily_report| %>
+                            <div class="process__item">
+                                <h4>Отчет за <%= daily_report.created_at %></h4>
+                                <p>
+                                    <%= daily_report.content.html_safe %>
+                                </p>
                             </div>
-                            <div class="col-xs-6 text-right">
-                                <a class="type--fine-print" href="#">Новее &raquo;</a>
-                            </div>
-                        </div>
+                        <% end %>
                     </div>
                 </div>
             </div>
