--- a/app/views/daily_reports/index.html.erb
+++ b/app/views/daily_reports/index.html.erb
@@ -23,7 +23,7 @@
                     <div class="process-1">
                         <% @daily_reports.each do |daily_report| %>
                             <div class="process__item">
-                                <h4>Отчет за <%= daily_report.created_at %></h4>
+                                <h4>Отчет за <%=l daily_report.created_at, format: :event_day %></h4>
                                 <p>
                                     <%= daily_report.content.html_safe %>
                                 </p>
