--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -16,19 +16,19 @@
                     </li>
                 </ul>
             </div>
-        </div>
-        <!--end of row-->
-        <div class="row">
             <div class="col-sm-6">
                 <p class="type--fine-print">
                     Достигайте целей в игровой форме!
                 </p>
             </div>
-            <div class="col-sm-6 text-right text-center-xs">
+        </div>
+        <!--end of row-->
+        <div class="row">
+            <div class="col-sm-12 text-left text-center-xs">
                 <span class="type--fine-print">&copy;
                     <span class="update-year"></span> GoalGame Inc.</span>
-                <a class="type--fine-print" href="#">Privacy Policy</a>
-                <a class="type--fine-print" href="#">Legal</a>
+                <a class="type--fine-print" href="#">ИП Сафин Ильдар Рустамович.</a>
+                <a class="type--fine-print" href="#">ОГРНИП 315167300004343</a>
             </div>
         </div>
         <!--end of row-->
