Add offerta pdf file

--- a/app/views/users/registrations/new.html.slim
+++ b/app/views/users/registrations/new.html.slim
@@ -25,7 +25,7 @@
               .col-xs-12
                 span class="type--fine-print"
                   | Регистрируясь, вы подтверждаете условия&nbsp;
-                  a href="#" Публичной Оферты
+                  a href="/oferta.pdf" Публичной Оферты
               .col-xs-12
                 span class="type--fine-print"
                   | У меня уже есть аккаунт&nbsp;
