--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -29,6 +29,7 @@
                     <span class="update-year"></span> GoalGame Inc.</span>
                 <a class="type--fine-print" href="#">ИП Сафин Ильдар Рустамович.</a>
                 <a class="type--fine-print" href="#">ОГРНИП 316169000123503</a>
+                <a class="type--fine-print" href="/oferta.pdf">Договор Оферты</a>
             </div>
         </div>
         <!--end of row-->
