Fix logo content

--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -2,9 +2,9 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-3 col-sm-2">
-                <a href="index.html">
+                <%= link_to root_url %>
                   <%= image_tag "goalgame_logo.svg", class: "logo" %>
-                </a>
+                <% end %>
             </div>
             <div class="col-xs-9 col-sm-10 text-right">
                 <a href="#" class="hamburger-toggle" data-toggle-class="#menu2;hidden-xs hidden-sm">
