--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -2,7 +2,9 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <%= image_tag "goalgame_logo.svg", class: "logo" %>
+                <%= link_to root_url %>
+                  <%= image_tag "goalgame_logo.svg", class: "logo" %>
+                <% end %>
                 <ul class="list-inline list--hover">
                     <li>
                         <a href="#">
