--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <%= link_to root_url %>
+                <%= link_to root_url do %>
                   <%= image_tag "goalgame_logo.svg", class: "logo" %>
                 <% end %>
                 <ul class="list-inline list--hover">
