--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-3 col-sm-2">
-                <%= link_to root_url %>
+                <%= link_to root_url do %>
                   <%= image_tag "goalgame_logo.svg", class: "logo" %>
                 <% end %>
             </div>
