--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -21,9 +21,9 @@
         <div class="row">
             <div class="col-md-2 text-center text-left-sm hidden-xs col-md-push-5">
                 <div class="bar__module">
-                    <a href="index.html">
+                    <%= link_to root_url do %>
                       <%= image_tag "goalgame_logo.svg", class: "logo" %>
-                    </a>
+                    <% end %>
                 </div>
                 <!--end module-->
             </div>
