--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -22,7 +22,7 @@ html
     main
       = render "header"
       = yield
-      = render "user_personas"
+      / = render "user_personas"
       = render "footer"
 
     = javascript_include_tag 'application'
