--- a/app/views/dashboards/index.html.slim
+++ b/app/views/dashboards/index.html.slim
@@ -3,18 +3,30 @@
     .container
       .row.text-center
         .col-md-6
-          h2 Последние Отчеты
-          .reports
-            - @daily_reports.each do |daily_report|
-              p
-                | Отчет за&nbsp;
-                =l daily_report.created_at, format: :event_day
-        .col-md-6
           h2 Текущие цели
           .goals
             - @goals.each do |goal|
-              p
-                = goal.description
-      = link_to "новая цель", new_goal_url
-      br
-      = link_to "новый отчет", new_daily_report_url
+              = link_to goal.description, goal_url(goal)
+          = link_to "новая цель", new_goal_url
+        .col-md-6
+          h2 Статистика
+          .user-personas
+            section class="space--sm"
+              .container
+                .row
+                  .col-md-6
+                    .person-wrapper
+                      = render "shared/person"
+                  .col-md-6
+                    p
+                      | Персонаж:&nbsp;
+                      = current_user.profile.full_name
+                    p
+                      | Уровень:&nbsp;
+                      = current_user.profile.level
+
+                    p
+                      = image_tag "gold.png", width: 20, height: 20
+                      | &nbsp;
+                      = current_user.account.coins
+                      | &nbsp;монет
