--- a/app/views/goals/show.html.slim
+++ b/app/views/goals/show.html.slim
@@ -20,7 +20,7 @@
       br
       .row
         .col-md-6.text-center
-          = image_tag @goal.picture_url, class: "border--round box-shadow-wide", width: 555, height: 369
+          = image_tag @goal.picture_url, class: "border--round box-shadow-wide", width: 555
 
           | Цель:&nbsp;
           span
