--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -36,6 +36,9 @@
                         <li>
                           <%= link_to "Цели", goals_url %>
                         </li>
+                        <li>
+                          <%= link_to "Блоги", blogs_url %>
+                        </li>
                     </ul>
                 </div>
                 <!--end module-->
