--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -4,10 +4,7 @@
         <div class="row">
             <div class="col-sm-12 text-left text-center-xs">
                 <span class="type--fine-print">&copy;
-                    <span class="update-year"></span> GoalGame Inc.</span>
-                <a class="type--fine-print" href="#">ИП Сафин Ильдар Рустамович.</a>
-                <a class="type--fine-print" href="#">ОГРНИП 316169000123503</a>
-                <a class="type--fine-print" href="/oferta.pdf">Договор Оферты</a>
+                <span class="update-year"></span> GoalGame 2020.</span>
             </div>
         </div>
         <!--end of row-->
