Try to deploy without font

--- a/app/assets/stylesheets/socicon.css
+++ b/app/assets/stylesheets/socicon.css
@@ -1,12 +1,11 @@
 @charset "UTF-8";
 
-@font-face {
+/* @font-face {
   font-family: "socicon";
   src: font-url("socicon.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
-
-}
+} */
 
 [data-icon]:before {
   font-family: "socicon" !important;
